# architect-layout-solver

./: .gitignore  LICENSE  README.md
.github/workflows/: deploy.yml
constraints-resolver/: .gitignore  Cargo.toml
constraints-resolver/demo/: index.html  solver-worker.js
constraints-resolver/src/: candidate_generation.rs  geometry.rs  lib.rs  room_ordering.rs  scoring.rs  solver.rs  types.rs  wasm.rs
docs/: poc_project_plan.md
