[package]
name = "constraints-resolver"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Logging facade - industry standard for Rust logging
log = "0.4"

# WebAssembly bindings
wasm-bindgen = "0.2"

# Serialization support for data structures
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"

# Time measurement that works in both WASM and native
instant = { version = "0.1", features = ["wasm-bindgen"] }